gccida/c3/ftruncify
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ftruncify/src/optabs.c:4815:23: error: use of undeclared identifier 'machine_mode'
temp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ftruncify/src/optabs.c:4815:38: error: expected expression
temp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ftruncify/src/optabs.c:4816:23: error: use of undeclared identifier 'machine_mode'
return expand_unop( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), optab_table[17], x, temp, 0); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ftruncify/src/optabs.c:4816:38: error: expected expression
return expand_unop( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), optab_table[17], x, temp, 0); 
                                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ftruncify/src/obj/optabs.o] Error 1
